update auth module and users module
