# CMA-Backend/libs/modules/users/src/user.model.js
@@ -1,10 +1,0 @@
-class User {
-    id;
-    email;
-    password;
-    fullName;
-    role;
-    avatar;
-    createdAt;
-    isDeleted;
-}
